--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'World War, 1914-1918 -- England -- London -- Fiction'
 - !lcsh 'Spy stories'
 - !lcsh 'Short stories'
+- GITenberg
 tableOfContents: The Devil's dice -- The great tunnel plot -- The Hyde Park plot --
   The explosive needle -- The brass triangle -- The silent death.
 title: "The Bomb-Makers\r\nBeing Some Curious Records Concerning the Craft and Cunning\
